@@ -1,11 +1,12 @@
 package de.blackforestsolutions.dravelopsdatamodel.objectmothers;
 
-import de.blackforestsolutions.dravelopsdatamodel.Optimization;
 import de.blackforestsolutions.dravelopsdatamodel.ApiToken;
+import de.blackforestsolutions.dravelopsdatamodel.Optimization;
+import de.blackforestsolutions.dravelopsdatamodel.Point;
 import org.springframework.data.geo.Box;
-import org.springframework.data.geo.Point;
 
 import java.time.ZonedDateTime;
+import java.util.Collections;
 import java.util.List;
 import java.util.Locale;
 
@@ -21,9 +22,9 @@ public class ApiTokenObjectMother {
                 .setProtocol("http")
                 .setPort(8080)
                 .setDeparture("Furtwangen")
-                .setDepartureCoordinate(new Point(8.0d, 50.0d))
+                .setDepartureCoordinate(new Point.PointBuilder(8.0d, 50.0d).build())
                 .setArrival("Triberg")
-                .setArrivalCoordinate(new Point(8.0d, 50.0d))
+                .setArrivalCoordinate(new Point.PointBuilder(8.0d, 50.0d).build())
                 .setDateTime(ZonedDateTime.parse("2020-09-27T10:15:30+02:00"))
                 .setIsArrivalDateTime(true)
                 .setLanguage(new Locale("de"))
@@ -35,8 +36,10 @@ public class ApiTokenObjectMother {
                 .setPath("/path")
                 .setApiVersion("v1")
                 .setMaxResults(1)
-                .setBox(new Box(new Point(0.0d, 0.0d), new Point(0.0d, 0.0d)))
-                .setLayers(List.of("test"));
+                .setBox(new Box(new org.springframework.data.geo.Point(0.0d, 0.0d), new org.springframework.data.geo.Point(0.0d, 0.0d)))
+                .setLayers(Collections.singletonList("test"))
+                .setMaxPastDaysInCalendar(2)
+                .setHazelcastTimeRangeInMinutes(120);
     }
 
     public static ApiToken getApiTokenWithNoEmptyFields() {
@@ -45,9 +48,9 @@ public class ApiTokenObjectMother {
                 .setProtocol("http")
                 .setPort(8080)
                 .setDeparture("Furtwangen")
-                .setDepartureCoordinate(new Point(8.0d, 50.0d))
+                .setDepartureCoordinate(new Point.PointBuilder(8.0d, 50.0d).build())
                 .setArrival("Triberg")
-                .setArrivalCoordinate(new Point(8.0d, 50.0d))
+                .setArrivalCoordinate(new Point.PointBuilder(8.0d, 50.0d).build())
                 .setDateTime(ZonedDateTime.parse("2020-09-27T10:15:30+02:00"))
                 .setIsArrivalDateTime(true)
                 .setLanguage(new Locale("de"))
@@ -59,8 +62,19 @@ public class ApiTokenObjectMother {
                 .setPath("/path")
                 .setMaxResults(1)
                 .setApiVersion("v1")
-                .setBox(new Box(new Point(0.0d, 0.0d), new Point(0.0d, 0.0d)))
-                .setLayers(List.of("test"))
+                .setBox(new Box(new org.springframework.data.geo.Point(0.0d, 0.0d), new org.springframework.data.geo.Point(0.0d, 0.0d)))
+                .setLayers(Collections.singletonList("test"))
+                .setMaxPastDaysInCalendar(2)
+                .setHazelcastTimeRangeInMinutes(120)
+                .build();
+    }
+
+    public static ApiToken getApiTokenWithNoEmptyFieldsBy(Point arrivalCoordinate, Point departureCoordinate, ZonedDateTime dateTime, Locale language) {
+        return getApiTokenBuilderWithNoEmptyFields()
+                .setArrivalCoordinate(arrivalCoordinate)
+                .setDepartureCoordinate(departureCoordinate)
+                .setDateTime(dateTime)
+                .setLanguage(language)
                 .build();
     }
 
@@ -70,6 +84,30 @@ public class ApiTokenObjectMother {
         return new ApiToken.ApiTokenBuilder()
                 .setOptimize(Optimization.QUICK)
                 .setIsArrivalDateTime(false)
+                .setDateTime(ZonedDateTime.parse("2020-09-30T13:00:00+02:00"))
+                .setDepartureCoordinate(getAmGrosshausbergPoint())
+                .setArrivalCoordinate(getSickAgPoint())
+                .setLanguage(new Locale("de"))
+                .build();
+    }
+
+    public static ApiToken getConfiguredRoutePersistenceApiToken() {
+        return new ApiToken.ApiTokenBuilder()
+                .setProtocol("http")
+                .setHost("localhost")
+                .setPort(8088)
+                .setPath("/otp/journeys/get")
+                .build();
+    }
+
+    public static ApiToken getRoutePersistenceApiToken() {
+        return new ApiToken.ApiTokenBuilder()
+                .setProtocol("http")
+                .setHost("localhost")
+                .setPort(8088)
+                .setPath("/otp/journeys/get")
+                .setIsArrivalDateTime(false)
+                .setOptimize(Optimization.QUICK)
                 .setDateTime(ZonedDateTime.parse("2020-09-30T13:00:00+02:00"))
                 .setDepartureCoordinate(getAmGrosshausbergPoint())
                 .setArrivalCoordinate(getSickAgPoint())
@@ -247,5 +285,13 @@ public class ApiTokenObjectMother {
                 .build();
     }
     // End
+
+    // HazelcastApiToken
+    public static ApiToken getHazelcastApiToken() {
+        return new ApiToken.ApiTokenBuilder()
+                .setMaxPastDaysInCalendar(2)
+                .setHazelcastTimeRangeInMinutes(120)
+                .build();
+    }
 
 }
